主页/列表/详情/我页合并和设置跳转

--- a/list.html
+++ b/list.html
@@ -15,21 +15,21 @@
       <header class="headerWrap">
         <div class="header">
           <div class="headerLeft">
-            <a href="javascript:;"><img src="img/list/facebook.png" alt=""></a>
-            <a href="javascript:;"><img src="img/list/instagram.png" alt=""></a>
-            <a href="javascript:;"><img src="img/list/twitter.png" alt=""></a>
+            <a href="list.html"><img src="img/index/facebook.png" alt=""></a>
+            <a href="list.html"><img src="img/index/instagram.png" alt=""></a>
+            <a href="list.html"><img src="img/index/twitter.png" alt=""></a>
           </div>
           <h1 class="logo">
-            <a href="javascript:;">
-              <img src="img/list/logo.png" alt="">
+            <a href="index.html">
+              <img src="img/index/logo.png" alt="">
             </a>
           </h1>
           <div class="headerRight">
             <ul class="register">
-              <li><a class="iconfont icon-gerenzhongxin-xuanzhong" href="javascript:;"></a></li>
-              <li><a class="iconfont icon-zhuce" href="javascript:;"></a></li>
-              <li><a class="iconfont icon-xianchangren" href="javascript:;"></a></li>
-              <li><a class="iconfont icon-gouwuche" href="javascript:;"></a></li>
+              <li><a class="iconfont icon-gerenzhongxin-xuanzhong" href="myPage.html"></a></li>
+              <li><a class="iconfont icon-zhuce" href="list.html"></a></li>
+              <li><a class="iconfont icon-xianchangren" href="list.html"></a></li>
+              <li><a class="iconfont icon-gouwuche" href="list.html"></a></li>
             </ul>
             <div class="search_input">
               <i class="fa fa-search" id="i-advanced-search-i"></i>
@@ -42,32 +42,32 @@
       <nav class="navWrap">
         <ul class="navList">
           <li class="navItem">
-            <a href="javascript:;">LIVING ROOM</a>
+            <a class="text" href="list.html">LIVING ROOM</a>
             <ul class="itemCon">
               <li class="itemConText">
-                <a href="javascript:;">Sofa</a>
-                <a href="javascript:;">Table</a>
-                <a href="javascript:;">TV cabinet</a>
-                <a href="javascript:;">Curtain</a>
-                <a href="javascript:;">Ornament</a>
+                <a href="list.html">Sofa</a>
+                <a href="list.html">Table</a>
+                <a href="list.html">TV cabinet</a>
+                <a href="list.html">Curtain</a>
+                <a href="list.html">Ornament</a>
               </li>
               <li class="itemConImg">
-                <a href="javascript:;">
-                  <img src="img/list/itemcon1.jpg" alt="">
+                <a href="list.html">
+                  <img src="img/index/itemcon1.jpg" alt="">
                   <span>view details</span>
                   <div class="mask"></div>
                 </a>
               </li>
               <li class="itemConImg">
-                <a href="javascript:;">
-                  <img src="img/list/itemcon2.jpg" alt="">
+                <a href="list.html">
+                  <img src="img/index/itemcon2.jpg" alt="">
                   <span>view details</span>
                   <div class="mask"></div>
                 </a>
               </li>
               <li class="itemConImg">
-                <a href="javascript:;">
-                  <img src="img/list/itemcon3.jpg" alt="">
+                <a href="list.html">
+                  <img src="img/index/itemcon3.jpg" alt="">
                   <span>view details</span>
                   <div class="mask"></div>
                 </a>
@@ -75,32 +75,32 @@
             </ul>
           </li>
           <li class="navItem">
-            <a href="javascript:;">BED ROOM</a>
+            <a class="text" href="list.html">BED ROOM</a>
             <ul class="itemCon">
               <li class="itemConText">
-                <a href="javascript:;">Bed</a>
-                <a href="javascript:;">Drawers</a>
-                <a href="javascript:;">Mattress</a>
-                <a href="javascript:;">Night table</a>
-                <a href="javascript:;">Dressing</a>
+                <a href="list.html">Bed</a>
+                <a href="list.html">Drawers</a>
+                <a href="list.html">Mattress</a>
+                <a href="list.html">Night table</a>
+                <a href="list.html">Dressing</a>
               </li>
               <li class="itemConImg">
-                <a href="javascript:;">
-                  <img src="img/list/itemcon4.jpg" alt="">
+                <a href="list.html">
+                  <img src="img/index/itemcon4.jpg" alt="">
                   <span>view details</span>
                   <div class="mask"></div>
                 </a>
               </li>
               <li class="itemConImg">
-                <a href="javascript:;">
-                  <img src="img/list/itemcon5.jpg" alt="">
+                <a href="list.html">
+                  <img src="img/index/itemcon5.jpg" alt="">
                   <span>view details</span>
                   <div class="mask"></div>
                 </a>
               </li>
               <li class="itemConImg">
-                <a href="javascript:;">
-                  <img src="img/list/itemcon6.jpg" alt="">
+                <a href="list.html">
+                  <img src="img/index/itemcon6.jpg" alt="">
                   <span>view details</span>
                   <div class="mask"></div>
                 </a>
@@ -108,32 +108,32 @@
             </ul>
           </li>
           <li class="navItem">
-            <a href="javascript:;">KITCHEN</a>
+            <a class="text" href="list.html">KITCHEN</a>
             <ul class="itemCon">
               <li class="itemConText">
-                <a href="javascript:;">Cabinet</a>
-                <a href="javascript:;">Cupboard</a>
-                <a href="javascript:;">Dining table</a>
-                <a href="javascript:;">Dish rack</a>
-                <a href="javascript:;">Lighting</a>
+                <a href="list.html">Cabinet</a>
+                <a href="list.html">Cupboard</a>
+                <a href="list.html">Dining table</a>
+                <a href="list.html">Dish rack</a>
+                <a href="list.html">Lighting</a>
               </li>
               <li class="itemConImg">
-                <a href="javascript:;">
-                  <img src="img/list/itemcon8.jpg" alt="">
+                <a href="list.html">
+                  <img src="img/index/itemcon12.jpg" alt="">
                   <span>view details</span>
                   <div class="mask"></div>
                 </a>
               </li>
               <li class="itemConImg">
-                <a href="javascript:;">
-                  <img src="img/list/itemcon7.jpg" alt="">
+                <a href="list.html">
+                  <img src="img/index/itemcon7.jpg" alt="">
                   <span>view details</span>
                   <div class="mask"></div>
                 </a>
               </li>
               <li class="itemConImg">
-                <a href="javascript:;">
-                  <img src="img/list/itemcon9.jpg" alt="">
+                <a href="list.html">
+                  <img src="img/index/itemcon9.jpg" alt="">
                   <span>view details</span>
                   <div class="mask"></div>
                 </a>
@@ -141,32 +141,32 @@
             </ul>
           </li>
           <li class="navItem">
-            <a href="javascript:;">BATHROOM</a>
+            <a class="text" href="list.html">BATHROOM</a>
             <ul class="itemCon">
               <li class="itemConText">
-                <a href="javascript:;">Bathtub</a>
-                <a href="javascript:;">Vanity table</a>
-                <a href="javascript:;">Mat</a>
-                <a href="javascript:;">Curtain</a>
-                <a href="javascript:;">Shower</a>
+                <a href="list.html">Bathtub</a>
+                <a href="list.html">Vanity table</a>
+                <a href="list.html">Mat</a>
+                <a href="list.html">Curtain</a>
+                <a href="list.html">Shower</a>
               </li>
               <li class="itemConImg">
-                <a href="javascript:;">
-                  <img src="img/list/itemcon10.jpg" alt="">
+                <a href="list.html">
+                  <img src="img/index/itemcon10.jpg" alt="">
                   <span>view details</span>
                   <div class="mask"></div>
                 </a>
               </li>
               <li class="itemConImg">
-                <a href="javascript:;">
-                  <img src="img/list/itemcon11.jpg" alt="">
+                <a href="list.html">
+                  <img src="img/index/itemcon11.jpg" alt="">
                   <span>view details</span>
                   <div class="mask"></div>
                 </a>
               </li>
               <li class="itemConImg">
-                <a href="javascript:;">
-                  <img src="img/list/itemcon12.jpg" alt="">
+                <a href="list.html">
+                  <img src="img/index/itemcon12.jpg" alt="">
                   <span>view details</span>
                   <div class="mask"></div>
                 </a>
@@ -174,32 +174,32 @@
             </ul>
           </li>
           <li class="navItem">
-            <a href="javascript:;">STUDY ROOM</a>
+            <a class="text" href="list.html">STUDY ROOM</a>
             <ul class="itemCon">
               <li class="itemConText">
-                <a href="javascript:;">Bookcase</a>
-                <a href="javascript:;">Table lamp</a>
-                <a href="javascript:;">Desk</a>
-                <a href="javascript:;">Divan</a>
-                <a href="javascript:;">Cothes rail</a>
+                <a href="list.html">Bookcase</a>
+                <a href="list.html">Table lamp</a>
+                <a href="list.html">Desk</a>
+                <a href="list.html">Divan</a>
+                <a href="list.html">Cothes rail</a>
               </li>
               <li class="itemConImg">
-                <a href="javascript:;">
-                  <img src="img/list/itemcon5.jpg" alt="">
+                <a href="list.html">
+                  <img src="img/index/itemcon5.jpg" alt="">
                   <span>view details</span>
                   <div class="mask"></div>
                 </a>
               </li>
               <li class="itemConImg">
-                <a href="javascript:;">
-                  <img src="img/list/itemcon9.jpg" alt="">
+                <a href="list.html">
+                  <img src="img/index/itemcon9.jpg" alt="">
                   <span>view details</span>
                   <div class="mask"></div>
                 </a>
               </li>
               <li class="itemConImg">
-                <a href="javascript:;">
-                  <img src="img/list/itemcon4.jpg" alt="">
+                <a href="list.html">
+                  <img src="img/index/itemcon4.jpg" alt="">
                   <span>view details</span>
                   <div class="mask"></div>
                 </a>
@@ -207,23 +207,23 @@
             </ul>
           </li>
           <li class="navItem navSmall">
-            <a href="javascript:;">LIFE STYLE</a>
+            <a class="text" href="list.html">LIFE STYLE</a>
             <div class="smallList">
-              <a href="">Modern</a>
-              <a href="">Simple</a>
-              <a href="">Country</a>
-              <a href="">American</a>
-              <a href="">Cozy</a>
+              <a href="list.html">Modern</a>
+              <a href="list.html">Simple</a>
+              <a href="list.html">Country</a>
+              <a href="list.html">American</a>
+              <a href="list.html">Cozy</a>
             </div>
           </li>
           <li class="navItem">
-            <a href="javascript:;">SERIES</a>
+            <a class="text" href="list.html">SERIES</a>
           </li>
           <li class="navItem">
-            <a href="javascript:;">EVENT</a>
+            <a class="text" href="list.html">EVENT</a>
           </li>
           <li class="navItem">
-            <a href="javascript:;">COMMUNITY</a>
+            <a class="text" href="list.html">COMMUNITY</a>
           </li>
         </ul>
       </nav>
@@ -233,47 +233,47 @@
              <p class="seek">你是不是想找:</p>
              <ul class="seek_item">
                <li class="seek_list">
-                 <a href="javascript:;">
+                 <a href="details.html">
                     桌子
                  </a>
                </li>
                <li class="seek_list">
-                 <a href="javascript:;">
+                 <a href="details.html">
                     沙发
                  </a>
                </li>
                <li class="seek_list">
-                 <a href="javascript:;">
+                 <a href="details.html">
                    床
                  </a>
                </li>
                <li class="seek_list">
-                 <a href="javascript:;">
+                 <a href="details.html">
                    椅子
                  </a>
                </li>
                <li class="seek_list">
-                 <a href="javascript:;">
+                 <a href="details.html">
                    衣柜
                  </a>
                </li>
                <li class="seek_list">
-                 <a href="javascript:;">
+                 <a href="details.html">
                    梳妆台
                  </a>
                </li>
                <li class="seek_list">
-                 <a href="javascript:;">
+                 <a href="details.html">
                    书柜
                  </a>
                </li>
                <li class="seek_list">
-                 <a href="javascript:;">
+                 <a href="details.html">
                    茶几
                  </a>
                </li>
                <li class="seek_list">
-                 <a href="javascript:;">
+                 <a href="details.html">
                     浴柜
                  </a>
                </li>
@@ -283,7 +283,7 @@
               <input type="text" placeholder="￥" value="">
               <span class="price_1">-</span>
               <input type="text" placeholder="￥" value="">
-              <span class="price_2"><a href="javascript:;">确认</a></span>
+              <span class="price_2"><a href="details.html">确认</a></span>
             </div>
           </div>
           <div class="goods">
@@ -690,13 +690,13 @@
           <div class="paging">
              <p class="paging_num">
                <span class="top tap">上一页</span>
-               <a href="javascript:;">1</a>
-               <a href="javascript:;">2</a>
-               <a href="javascript:;">3</a>
+               <a href="list.html">1</a>
+               <a href="list.html">2</a>
+               <a href="list.html">3</a>
                <span class="fh">...</span>
-               <a href="javascript:;">7</a>
-               <a href="javascript:;">8</a>
-               <a href="javascript:;">9</a>
+               <a href="list.html">7</a>
+               <a href="list.html">8</a>
+               <a href="list.html">9</a>
                <span class="bottom tap">下一页</span>
                <span>第</span>
                <input type="text" id="jump">
@@ -731,19 +731,19 @@
       <nav class="fixedNavWrap">
         <div class="fixedNav">
           <ul class="fixedNavListLeft">
-            <li><a class="iconfont icon-zhuye" href="javascript:;"></a></li>
-            <li><a href="javascript:;">LIVING ROOM</a></li>
-            <li><a href="javascript:;">BED ROOM</a></li>
-            <li><a href="javascript:;">KITCHEN</a></li>
+            <li><a class="iconfont icon-zhuye" href="index.html"></a></li>
+            <li><a href="details.html">LIVING ROOM</a></li>
+            <li><a href="details.html">BED ROOM</a></li>
+            <li><a href="details.html">KITCHEN</a></li>
           </ul>
           <ul class="fixedNavListMiddle">
-            <li><a href="javascript:;">SERIES</a></li>
-            <li><a href="javascript:;">SALE</a></li>
+            <li><a href="details.html">SERIES</a></li>
+            <li><a href="details.html">SALE</a></li>
           </ul>
           <ul class="fixedNavListRight">
-            <li><a class="iconfont icon-gerenzhongxin-xuanzhong" href="javascript:;"></a></li>
-            <li><a class="iconfont icon-zhuce" href="javascript:;"></a></li>
-            <li><a class="iconfont icon-gouwuche" href="javascript:;"></a></li>
+            <li><a class="iconfont icon-gerenzhongxin-xuanzhong" href="details.html"></a></li>
+            <li><a class="iconfont icon-zhuce" href="details.html"></a></li>
+            <li><a class="iconfont icon-gouwuche" href="details.html"></a></li>
           </ul>
         </div>
       </nav>
