--- a/myPage.html
+++ b/myPage.html
@@ -16,21 +16,21 @@
     <header class="headerWrap">
       <div class="header">
         <div class="headerLeft">
-          <a href="javascript:;"><img src="img/index/facebook.png" alt=""></a>
-          <a href="javascript:;"><img src="img/index/instagram.png" alt=""></a>
-          <a href="javascript:;"><img src="img/index/twitter.png" alt=""></a>
+          <a href="list.html"><img src="img/index/facebook.png" alt=""></a>
+          <a href="list.html"><img src="img/index/instagram.png" alt=""></a>
+          <a href="list.html"><img src="img/index/twitter.png" alt=""></a>
         </div>
         <h1 class="logo">
-          <a href="javascript:;">
+          <a href="index.html">
             <img src="img/index/logo.png" alt="">
           </a>
         </h1>
         <div class="headerRight">
           <ul class="register">
-            <li><a class="iconfont icon-gerenzhongxin-xuanzhong" href="javascript:;"></a></li>
-            <li><a class="iconfont icon-zhuce" href="javascript:;"></a></li>
-            <li><a class="iconfont icon-xianchangren" href="javascript:;"></a></li>
-            <li><a class="iconfont icon-gouwuche" href="javascript:;"></a></li>
+            <li><a class="iconfont icon-gerenzhongxin-xuanzhong" href="myPage.html"></a></li>
+            <li><a class="iconfont icon-zhuce" href="list.html"></a></li>
+            <li><a class="iconfont icon-xianchangren" href="list.html"></a></li>
+            <li><a class="iconfont icon-gouwuche" href="list.html"></a></li>
           </ul>
           <div class="search_input">
             <i class="fa fa-search" id="i-advanced-search-i"></i>
@@ -43,31 +43,31 @@
     <nav class="navWrap">
       <ul class="navList">
         <li class="navItem">
-          <a class="text" href="javascript:;">LIVING ROOM</a>
+          <a class="text" href="list.html">LIVING ROOM</a>
           <ul class="itemCon">
             <li class="itemConText">
-              <a href="javascript:;">Sofa</a>
-              <a href="javascript:;">Table</a>
-              <a href="javascript:;">TV cabinet</a>
-              <a href="javascript:;">Curtain</a>
-              <a href="javascript:;">Ornament</a>
+              <a href="list.html">Sofa</a>
+              <a href="list.html">Table</a>
+              <a href="list.html">TV cabinet</a>
+              <a href="list.html">Curtain</a>
+              <a href="list.html">Ornament</a>
             </li>
             <li class="itemConImg">
-              <a href="javascript:;">
+              <a href="list.html">
                 <img src="img/index/itemcon1.jpg" alt="">
                 <span>view details</span>
                 <div class="mask"></div>
               </a>
             </li>
             <li class="itemConImg">
-              <a href="javascript:;">
+              <a href="list.html">
                 <img src="img/index/itemcon2.jpg" alt="">
                 <span>view details</span>
                 <div class="mask"></div>
               </a>
             </li>
             <li class="itemConImg">
-              <a href="javascript:;">
+              <a href="list.html">
                 <img src="img/index/itemcon3.jpg" alt="">
                 <span>view details</span>
                 <div class="mask"></div>
@@ -76,31 +76,31 @@
           </ul>
         </li>
         <li class="navItem">
-          <a class="text" href="javascript:;">BED ROOM</a>
+          <a class="text" href="list.html">BED ROOM</a>
           <ul class="itemCon">
             <li class="itemConText">
-              <a href="javascript:;">Bed</a>
-              <a href="javascript:;">Drawers</a>
-              <a href="javascript:;">Mattress</a>
-              <a href="javascript:;">Night table</a>
-              <a href="javascript:;">Dressing</a>
+              <a href="list.html">Bed</a>
+              <a href="list.html">Drawers</a>
+              <a href="list.html">Mattress</a>
+              <a href="list.html">Night table</a>
+              <a href="list.html">Dressing</a>
             </li>
             <li class="itemConImg">
-              <a href="javascript:;">
+              <a href="list.html">
                 <img src="img/index/itemcon4.jpg" alt="">
                 <span>view details</span>
                 <div class="mask"></div>
               </a>
             </li>
             <li class="itemConImg">
-              <a href="javascript:;">
+              <a href="list.html">
                 <img src="img/index/itemcon5.jpg" alt="">
                 <span>view details</span>
                 <div class="mask"></div>
               </a>
             </li>
             <li class="itemConImg">
-              <a href="javascript:;">
+              <a href="list.html">
                 <img src="img/index/itemcon6.jpg" alt="">
                 <span>view details</span>
                 <div class="mask"></div>
@@ -109,31 +109,31 @@
           </ul>
         </li>
         <li class="navItem">
-          <a class="text" href="javascript:;">KITCHEN</a>
+          <a class="text" href="list.html">KITCHEN</a>
           <ul class="itemCon">
             <li class="itemConText">
-              <a href="javascript:;">Cabinet</a>
-              <a href="javascript:;">Cupboard</a>
-              <a href="javascript:;">Dining table</a>
-              <a href="javascript:;">Dish rack</a>
-              <a href="javascript:;">Lighting</a>
+              <a href="list.html">Cabinet</a>
+              <a href="list.html">Cupboard</a>
+              <a href="list.html">Dining table</a>
+              <a href="list.html">Dish rack</a>
+              <a href="list.html">Lighting</a>
             </li>
             <li class="itemConImg">
-              <a href="javascript:;">
+              <a href="list.html">
                 <img src="img/index/itemcon12.jpg" alt="">
                 <span>view details</span>
                 <div class="mask"></div>
               </a>
             </li>
             <li class="itemConImg">
-              <a href="javascript:;">
+              <a href="list.html">
                 <img src="img/index/itemcon7.jpg" alt="">
                 <span>view details</span>
                 <div class="mask"></div>
               </a>
             </li>
             <li class="itemConImg">
-              <a href="javascript:;">
+              <a href="list.html">
                 <img src="img/index/itemcon9.jpg" alt="">
                 <span>view details</span>
                 <div class="mask"></div>
@@ -142,31 +142,31 @@
           </ul>
         </li>
         <li class="navItem">
-          <a class="text" href="javascript:;">BATHROOM</a>
+          <a class="text" href="list.html">BATHROOM</a>
           <ul class="itemCon">
             <li class="itemConText">
-              <a href="javascript:;">Bathtub</a>
-              <a href="javascript:;">Vanity table</a>
-              <a href="javascript:;">Mat</a>
-              <a href="javascript:;">Curtain</a>
-              <a href="javascript:;">Shower</a>
+              <a href="list.html">Bathtub</a>
+              <a href="list.html">Vanity table</a>
+              <a href="list.html">Mat</a>
+              <a href="list.html">Curtain</a>
+              <a href="list.html">Shower</a>
             </li>
             <li class="itemConImg">
-              <a href="javascript:;">
+              <a href="list.html">
                 <img src="img/index/itemcon10.jpg" alt="">
                 <span>view details</span>
                 <div class="mask"></div>
               </a>
             </li>
             <li class="itemConImg">
-              <a href="javascript:;">
+              <a href="list.html">
                 <img src="img/index/itemcon11.jpg" alt="">
                 <span>view details</span>
                 <div class="mask"></div>
               </a>
             </li>
             <li class="itemConImg">
-              <a href="javascript:;">
+              <a href="list.html">
                 <img src="img/index/itemcon12.jpg" alt="">
                 <span>view details</span>
                 <div class="mask"></div>
@@ -175,31 +175,31 @@
           </ul>
         </li>
         <li class="navItem">
-          <a class="text" href="javascript:;">STUDY ROOM</a>
+          <a class="text" href="list.html">STUDY ROOM</a>
           <ul class="itemCon">
             <li class="itemConText">
-              <a href="javascript:;">Bookcase</a>
-              <a href="javascript:;">Table lamp</a>
-              <a href="javascript:;">Desk</a>
-              <a href="javascript:;">Divan</a>
-              <a href="javascript:;">Cothes rail</a>
+              <a href="list.html">Bookcase</a>
+              <a href="list.html">Table lamp</a>
+              <a href="list.html">Desk</a>
+              <a href="list.html">Divan</a>
+              <a href="list.html">Cothes rail</a>
             </li>
             <li class="itemConImg">
-              <a href="javascript:;">
+              <a href="list.html">
                 <img src="img/index/itemcon5.jpg" alt="">
                 <span>view details</span>
                 <div class="mask"></div>
               </a>
             </li>
             <li class="itemConImg">
-              <a href="javascript:;">
+              <a href="list.html">
                 <img src="img/index/itemcon9.jpg" alt="">
                 <span>view details</span>
                 <div class="mask"></div>
               </a>
             </li>
             <li class="itemConImg">
-              <a href="javascript:;">
+              <a href="list.html">
                 <img src="img/index/itemcon4.jpg" alt="">
                 <span>view details</span>
                 <div class="mask"></div>
@@ -208,23 +208,23 @@
           </ul>
         </li>
         <li class="navItem navSmall">
-          <a class="text" href="javascript:;">LIFE STYLE</a>
+          <a class="text" href="list.html">LIFE STYLE</a>
           <div class="smallList">
-            <a href="">Modern</a>
-            <a href="">Simple</a>
-            <a href="">Country</a>
-            <a href="">American</a>
-            <a href="">Cozy</a>
+            <a href="list.html">Modern</a>
+            <a href="list.html">Simple</a>
+            <a href="list.html">Country</a>
+            <a href="list.html">American</a>
+            <a href="list.html">Cozy</a>
           </div>
         </li>
         <li class="navItem">
-          <a class="text" href="javascript:;">SERIES</a>
+          <a class="text" href="list.html">SERIES</a>
         </li>
         <li class="navItem">
-          <a class="text" href="javascript:;">EVENT</a>
+          <a class="text" href="list.html">EVENT</a>
         </li>
         <li class="navItem">
-          <a class="text" href="javascript:;">COMMUNITY</a>
+          <a class="text" href="list.html">COMMUNITY</a>
         </li>
       </ul>
     </nav>
@@ -272,7 +272,7 @@
                       </div>
                       <div class="loadPhoto">
                         <p>upload</p>
-                        <input type="file" disabled>
+                        <input type="" disabled>
                       </div>
                     </div>
 
